# flap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
flap-app/: index.html  package-lock.json  package.json
flap-app/src/: App.css  App.tsx  HelpModal.tsx  Modal.css  Modal.tsx  SettingsModal.tsx
flap-app/src-tauri/: Cargo.toml  tauri.conf.json
flap-app/src-tauri/capabilities/: default.json
flap-app/src-tauri/src/: client.rs  commands.rs  frontend_events.rs  lib.rs  main.rs
flap-cli/: Cargo.toml
flap-cli/src/: main.rs
flap-lib/: Cargo.toml
flap-lib/src/: error.rs  event.rs  file_metadata.rs  file_stream.rs  lib.rs  p2p.rs  receiver.rs  sender.rs  tar.rs  ticket.rs
flap-lib/src/crypto/: blake3.rs  encryption_stream.rs  file_key.rs  master_key.rs  mod.rs  nonce.rs  transfer_id.rs  x25519.rs
flap-lib/src/fs/: metadata.rs  mod.rs  save.rs
flap-lib/src/p2p/: endpoint.rs  frame.rs  mod.rs  receiver.rs  sender.rs
