[package]
name = "flap-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["io-util"] }
bytes = "1"
tokio-stream = "0.1.17"
aead = { version = "0.5.2", features = ["stream"] }
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
hkdf = "0.12.4"
iroh = { version = "0.91.0" }
iroh-blobs = "0.93.0"
rand = "0.9.2"
sha2 = "0.10.9"
thiserror = "2.0.12"
