[package]
name = "flap-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["io-util"] }
bytes = "1"
tokio-stream = "0.1.17"
aead = { version = "0.5.2", features = ["stream"] }
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
iroh = { version = "0.91.0" }
rand = "0.9.2"
sha2 = "0.10.9"
thiserror = "2.0.12"
tempfile = "3.20.0"
base64ct = "1.8.0"
dirs = "6.0.0"
snow = { version = "0.10.0", default-features = false, features = ["use-getrandom", "use-pqcrypto-kyber1024", "use-curve25519", "use-chacha20poly1305", "use-blake2"]}
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = "2.2.0"
blake3 = "1.8.2"
